deploy/k8s/coturn-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coturn
  namespace: sitaware
spec:
  type: LoadBalancer
  selector:
    app: coturn
  ports:
    - name: turn-udp
      port: 3478
      targetPort: 3478
      protocol: UDP
    - name: turn-tcp
      port: 3478
      targetPort: 3478
      protocol: TCP
